progress made on scrape

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "form-scraper": "0.0.4",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
+    "promisified-request": "0.0.3",
     "request": "^2.83.0"
   }
 }
